[package]
name = "merchant_inv_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.8.1"
lazy_static = "1.5.0"
enum-derived = "0.8.2"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.11.1"
csv = "1.3.1"
chrono = "0.4.39"
