[package]
name = "merchant"
version = "0.1.0"
edition = "2021"

[dependencies]
merchant_gen_lib = { path = "./merchant_gen_lib" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.26", features = ["derive"] }
